tests/ui/consts/const-eval/index_out_of_bounds.stderr
error[E0080]: index out of bounds: the length is 0 but the index is 0
  --> $DIR/index_out_of_bounds.rs:1:19
   |
LL | static FOO: i32 = [][0];
   |                   ^^^^^ evaluation of `FOO` failed here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
