tests/ui/consts/const-eval/index_out_of_bounds.rs
static FOO: i32 = [][0];
//~^ ERROR E0080

fn main() {}
